--- a/_includes/page/about.html
+++ b/_includes/page/about.html
@@ -1,8 +1,8 @@
 <div class="about">
-<div class="about__devider">*****</div>
+<div class="about__devider">**************</div>
 <div class="about__text">
-<strong> Non sunt multiplicanda entia sine necessitate </strong>
-<br>☕ Pudhina theme by Knhash 🛠️
-<br> You can change this text in _includes/page/about.html
+<strong> 学而时习之，不亦说乎 </strong>
+<br>☕ 有朋自远方来 不亦乐乎 🛠️
+<br> 温故而知新，可以为师矣
 </div>
 </div>
